[package] 
authors = ["mean00 <mean00@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "rnarduino"
version = "0.0.0"


[dependencies]
cty = "0.2.2"
panic-reset = "*"

[lib]
name = "rnarduino"
path = "src/rnarduino.rs"
crate-type = ["rlib"] # Creates static lib

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level       = 's'
