[package] 
authors = ["mean00 <mean00@gmail.com>"]
edition = "2024"
readme = "README.md"
name = "rnarduino"
version = "0.0.0"


[dependencies]
cty = "0.2.2"
ufmt = "*"
heapless = { version = "*", features = ["ufmt-impl"] }

[features]
cdc = []
rp2040 = []
esp32c3 = []
default = []

[lib]
name = "rnarduino"
path = "src/lib.rs"
crate-type = ["rlib"] # Creates static lib

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level       = 's'

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level       = 's'

[profile.dev.package."*"]
codegen-units   = 1
opt-level       = "s"
