CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../..)
INCLUDE(common_CMakeLists)

PROJECT(lnAdvanceADC C CXX ASM)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
ADD_SUBDIRECTORY(${ESPRIT_ROOT})

INCLUDE(${ESPRIT_ROOT}/setup.cmake)

SET( NVM ${ESPRIT_ROOT}/libraries/NeVerMind)
INCLUDE_DIRECTORIES(${NVM})
INCLUDE_DIRECTORIES(${NVM}/gd32)

SET(NVM_SRC ${NVM}/nvmCore.cpp  ${NVM}/gd32/nvm_gd32.cpp)

GENERATE_GD32_FIRMWARE(hello hello.cpp ${NVM_SRC})


