CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../..)
INCLUDE(common_CMakeLists)

PROJECT(Longan_mcp23017 C CXX ASM)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
ADD_SUBDIRECTORY(${AF_FOLDER})


INCLUDE(${AF_FOLDER}/setup.cmake)

#generic MCP part
SET( MCP23017 ${AF_FOLDER}/libraries/mcp23017 )
ADD_SUBDIRECTORY(${MCP23017})
INCLUDE_DIRECTORIES( ${MCP23017} ${MCP23017}/)

# longan nano specific part
INCLUDE_DIRECTORIES( ${MCP23017} ${MCP23017}/platformExample/longanNano)
SET(LIBMCP23017  ${MCP23017}/platformExample/longanNano/lnMcp23017.cpp)
#
GENERATE_GD32_FIRMWARE(demo_mcp23017 hello.cpp ${LIBMCP23017} )
target_link_libraries(demo_mcp23017 PRIVATE mcp23017)
